[package]
name = "forecast"
description = "A Rust client for the Dark Sky API."
readme = "README.md"
license = "Apache-2.0"
documentation = "https://jgrillo.github.io/forecast-rs/"
repository = "https://github.com/jgrillo/forecast-rs"
keywords = ["forecast", "weather", "darksky"]
version = "0.2.0"
authors = ["Jesse C. Grillo <jesse.grillo@gmail.com>"]

[features]
integration = []

[dependencies]
serde = "0.9"
serde_derive = "0.9"
serde_json = "0.9"
reqwest = "0.4"
itertools = "0.5"
