[package]
name = "forecast"
description = "A Rust client for the Dark Sky API."
readme = "README.md"
license = "Apache-2.0"
documentation = "https://jgrillo.github.io/forecast-rs/"
repository = "https://github.com/jgrillo/forecast-rs"
keywords = ["forecast", "weather", "darksky"]
version = "2.0.0"
authors = ["Jesse C. Grillo <jesse.grillo@gmail.com>"]

[features]
integration = []

[dependencies]
serde = "1.0.*"
serde_derive = "1.0.*"
serde_json = "1.0.*"
reqwest = "0.9.1"
itertools = "0.7.*"
